--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+horizon-eda (1.2.1-2) stable; urgency=medium
+
+  * Finalize packages
+
+ -- Lukas K <lukas@horizon-eda.org>  Tue, 11 Aug 2020 01:00:00 +0200
+
 horizon-eda (1.2.1-1) stable; urgency=medium
 
   * New upstream version
