--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+horizon-eda (1.4.0-1) stable; urgency=medium
+
+  * New upstream version
+
+ -- Lukas K <lukas@horizon-eda.org>  Fri, 29 Jan 2021 22:00:00 +0100
+
 horizon-eda (1.3.0-1) stable; urgency=medium
 
   * New upstream version
