--- a/debian/changelog
+++ b/debian/changelog
@@ -2,43 +2,43 @@ horizon-eda-upstream (1.4.0-1) stable; urgency=medium
 
   * Rename to horizon-eda-upstream
 
-horizon-eda (1.4.0-1) stable; urgency=medium
+horizon-eda-upstream (1.4.0-1) stable; urgency=medium
 
   * New upstream version
 
  -- Lukas K <lukas@horizon-eda.org>  Fri, 29 Jan 2021 22:00:00 +0100
 
-horizon-eda (1.3.0-1) stable; urgency=medium
+horizon-eda-upstream (1.3.0-1) stable; urgency=medium
 
   * New upstream version
 
  -- Lukas K <lukas@horizon-eda.org>  Thu, 29 Oct 2020 22:00:00 +0100
 
-horizon-eda (1.2.1-2) stable; urgency=medium
+horizon-eda-upstream (1.2.1-2) stable; urgency=medium
 
   * Finalize packages
 
  -- Lukas K <lukas@horizon-eda.org>  Tue, 11 Aug 2020 01:00:00 +0200
 
-horizon-eda (1.2.1-1) stable; urgency=medium
+horizon-eda-upstream (1.2.1-1) stable; urgency=medium
 
   * New upstream version
 
  -- Lukas K <lukas@horizon-eda.org>  Sat, 08 Aug 2020 00:30:41 +0200
 
-horizon-eda (1.2.0-3) unstable; urgency=medium
+horizon-eda-upstream (1.2.0-3) unstable; urgency=medium
 
   * add missing build depend dh-python
 
  -- Uwe Steinmann <steinm@debian.org>  Fri, 31 Jul 2020 11:51:17 +0200
 
-horizon-eda (1.2.0-2) unstable; urgency=medium
+horizon-eda-upstream (1.2.0-2) unstable; urgency=medium
 
   * add missing build depend libpython3-dev
 
  -- Uwe Steinmann <steinm@debian.org>  Fri, 31 Jul 2020 07:51:56 +0200
 
-horizon-eda (1.2.0-1) unstable; urgency=medium
+horizon-eda-upstream (1.2.0-1) unstable; urgency=medium
 
   * New upstream version
   * remove man pages for horizon-pool and horizon-prj
@@ -46,31 +46,31 @@ horizon-eda (1.2.0-1) unstable; urgency=medium
 
  -- Uwe Steinmann <steinm@debian.org>  Thu, 30 Jul 2020 14:40:31 +0200
 
-horizon-eda (1.1.1-1) unstable; urgency=medium
+horizon-eda-upstream (1.1.1-1) unstable; urgency=medium
 
   * New upstream version
 
  -- Uwe Steinmann <steinm@debian.org>  Tue, 05 May 2020 12:34:45 +0200
 
-horizon-eda (1.1.0-1) unstable; urgency=medium
+horizon-eda-upstream (1.1.0-1) unstable; urgency=medium
 
   * New upstream version
 
  -- Uwe Steinmann <steinm@debian.org>  Thu, 30 Apr 2020 07:53:01 +0200
 
-horizon-eda (1.0.91-1) unstable; urgency=medium
+horizon-eda-upstream (1.0.91-1) unstable; urgency=medium
 
   * New upstream version
 
  -- Uwe Steinmann <steinm@debian.org>  Mon, 27 Apr 2020 20:53:01 +0200
 
-horizon-eda (1.0.0-1) unstable; urgency=medium
+horizon-eda-upstream (1.0.0-1) unstable; urgency=medium
 
   * New upstream version
 
  -- Uwe Steinmann <steinm@debian.org>  Wed, 29 Jan 2020 21:29:38 +0100
 
-horizon-eda (0.20200117-1) unstable; urgency=medium
+horizon-eda-upstream (0.20200117-1) unstable; urgency=medium
 
   * New git snapshot (equals version 0.9.7)
   * Remove Vcs-Git and Vcs-Control
@@ -80,7 +80,7 @@ horizon-eda (0.20200117-1) unstable; urgency=medium
 
  -- Uwe Steinmann <steinm@debian.org>  Fri, 17 Jan 2020 08:39:17 +0100
 
-horizon-eda (0.20191213-1) unstable; urgency=medium
+horizon-eda-upstream (0.20191213-1) unstable; urgency=medium
 
   * New git snapshot (equals version 0.9.5)
   * set new Homepage in control file
@@ -88,7 +88,7 @@ horizon-eda (0.20191213-1) unstable; urgency=medium
 
  -- Uwe Steinmann <steinm@debian.org>  Fri, 13 Dec 2019 07:00:09 +0100
 
-horizon-eda (0.20191119-1) unstable; urgency=medium
+horizon-eda-upstream (0.20191119-1) unstable; urgency=medium
 
   * New git snapshot
   * Add myself as maintainer and Wookey as uploader
@@ -97,14 +97,14 @@ horizon-eda (0.20191119-1) unstable; urgency=medium
 
  -- Uwe Steinmann <steinm@debian.org>  Wed, 20 Nov 2019 06:37:30 +0100
 
-horizon-eda (0.20181108-1) unstable; urgency=medium
+horizon-eda-upstream (0.20181108-1) unstable; urgency=medium
 
   * New upstream version
   * Set rules-requires-root, now I understand it.
 
  -- Wookey <wookey@debian.org>  Thu, 08 Nov 2018 02:45:24 +0000
 
-horizon-eda (0.20180426-1) unstable; urgency=medium
+horizon-eda-upstream (0.20180426-1) unstable; urgency=medium
 
   * New upstream release
   * Fixes gcc-6 builds (builds in stable)
@@ -112,20 +112,20 @@ horizon-eda (0.20180426-1) unstable; urgency=medium
 
  -- Wookey <wookey@debian.org>  Thu, 26 Apr 2018 00:36:41 +0100
 
-horizon-eda (0.20180331-4) unstable; urgency=medium
+horizon-eda-upstream (0.20180331-4) unstable; urgency=medium
 
   * Correct description formatting (Closes: #894693)
 
  -- Wookey <wookey@debian.org>  Thu, 05 Apr 2018 02:59:23 +0100
 
-horizon-eda (0.20180331-3) unstable; urgency=medium
+horizon-eda-upstream (0.20180331-3) unstable; urgency=medium
 
   * Use system dxflib
   * Update git version reported
 
  -- Wookey <wookey@debian.org>  Tue, 03 Apr 2018 01:05:43 +0100
 
-horizon-eda (0.20180331-2) unstable; urgency=medium
+horizon-eda-upstream (0.20180331-2) unstable; urgency=medium
 
   * Update copyright to include hershey_fonts (Closes: #894552)
   * Support dpkg-buildflags hardening flags
@@ -133,7 +133,7 @@ horizon-eda (0.20180331-2) unstable; urgency=medium
 
  -- Wookey <wookey@debian.org>  Sun, 01 Apr 2018 15:07:29 +0100
 
-horizon-eda (0.20180331-1) unstable; urgency=medium
+horizon-eda-upstream (0.20180331-1) unstable; urgency=medium
 
   * Initial release (Closes: #889970)
 
