--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ horizon-eda-upstream (1.4.0-1) stable; urgency=medium
 
   * Rename to horizon-eda-upstream
 
+ -- Lukas K <lukas@horizon-eda.org>  Sat, 13 Feb 2021 22:00:00 +0100
+
 horizon-eda-upstream (1.4.0-1) stable; urgency=medium
 
   * New upstream version
