--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+horizon-eda-upstream (2.0.0-1) stable; urgency=medium
+
+  * New upstream version
+
+ -- Lukas K <lukas@horizon-eda.org>  Tue, 01 Jun 2021 12:20:00 +0200
+
 horizon-eda-upstream (1.4.0-1) stable; urgency=medium
 
   * Rename to horizon-eda-upstream
