--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+horizon-eda-upstream (2.1.91-1) stable; urgency=medium
+
+  * New upstream version
+
+ -- Lukas K <lukas@horizon-eda.org>  Fri, 07 Jan 2022 17:20:00 +0100
+
 horizon-eda-upstream (2.1.90-1) stable; urgency=medium
 
   * New upstream version
