--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+horizon-eda-upstream (2.2.0-1) stable; urgency=medium
+
+  * New upstream version
+
+ -- Lukas K <lukas@horizon-eda.org>  Sun, 09 Jan 2022 20:20:00 +0100
+
 horizon-eda-upstream (2.1.0-1) stable; urgency=medium
 
   * New upstream version
