--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+horizon-eda-upstream (2.3.90-1) stable; urgency=medium
+
+  * New upstream version
+
+ -- Lukas K <lukas@horizon-eda.org>  Sat, 01 Oct 2022 20:20:00 +0200
+
 horizon-eda-upstream (2.3.1-1) stable; urgency=medium
 
   * New upstream version
