--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+horizon-eda-upstream (2.4.90-1) stable; urgency=medium
+
+  * New upstream version
+
+ -- Lukas K <lukas@horizon-eda.org>  Tue, 02 May 2023 00:39:51 +0200
+
 horizon-eda-upstream (2.4.0-1) stable; urgency=medium
 
   * New upstream version
