--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+horizon-eda-upstream (2.5.92-1) stable; urgency=medium
+
+  * New upstream version
+
+ -- Lukas K <lukas@horizon-eda.org>  Wed, 15 May 2024 22:38:57 +0200
+
 horizon-eda-upstream (2.5.0-1) stable; urgency=medium
 
   * New upstream version
