--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+horizon-eda-upstream (2.6.0-1) stable; urgency=medium
+
+  * New upstream version
+
+ -- Lukas K <lukas@horizon-eda.org>  Sun, 19 May 2024 17:04:29 +0200
+
 horizon-eda-upstream (2.5.0-1) stable; urgency=medium
 
   * New upstream version
